crates/provider-imap/src/snapshots/mxr_provider_imap__parse__tests__imap_fixture__unsubscribe-oneclick.snap
---
source: crates/provider-imap/src/parse.rs
expression: "json!({\n    \"subject\": synced.envelope.subject, \"from\": synced.envelope.from, \"to\":\n    synced.envelope.to, \"cc\": synced.envelope.cc, \"message_id\":\n    synced.envelope.message_id_header, \"unsubscribe\":\n    format!(\"{:?}\", synced.envelope.unsubscribe), \"attachment_filenames\":\n    synced.body.attachments.iter().map(|attachment|\n    attachment.filename.clone()).collect::<Vec<_>>(), \"calendar\":\n    synced.body.metadata.calendar, \"content_language\":\n    synced.body.metadata.content_language, \"auth_results\":\n    synced.body.metadata.auth_results, \"text_plain_format\":\n    format!(\"{:?}\", synced.body.metadata.text_plain_format), \"plain_excerpt\":\n    synced.body.text_plain.as_deref().map(|body|\n    body.lines().take(3).collect::<Vec<_>>().join(\"\\n\")), \"html_present\":\n    synced.body.text_html.is_some(),\n})"
---
attachment_filenames: []
auth_results:
  - mx.example.net; dkim=pass
calendar: ~
cc: []
content_language: []
from:
  email: news@example.com
  name: Newsletter
html_present: true
message_id: "<unsubscribe@example.com>"
plain_excerpt: This fixture validates RFC 8058 one-click handling.
subject: One click unsubscribe
text_plain_format: Some(Fixed)
to:
  - email: user@example.com
    name: User
unsubscribe: "OneClick { url: \"https://example.com/unsub?id=42\" }"
